<resources>
    <string name="app_name">Alexa Device Finder</string>
    <string name="menu_settings">Settings</string>
    <string name="login_with_amazon">Login with Amazon</string>
    <string name="login_with_amazon_capital">LOGIN WITH AMAZON</string>
    <string name="login_button_content_description">"Button for authorization through Login with Amazon"</string>
    <string name="logout">Logout</string>
    <string name="default_message">Welcome to Login with Amazon!\nIf this is your first time logging in, you will be asked to give permission for this application to access your profile data.</string>
    <string name="return_to_app">Return to App</string>
    <string name="title_activity_launch">Device Finder</string>
    <string name="logo_to_display_when_loading_app">Logo to display when loading app</string>
    <string name="alexa_device_finder">Alexa Device Finder</string>
    <string name="alexa_device_finder_content_description">Name of app (Alexa Device Finder)</string>
    <string name="warning">ATTENTION</string>
    <string name="do_not_disturb_warning">Do Not Disturb permission is REQUIRED in order for this app to alert you when your phone is in silent mode. Otherwise it will be unable to find your phone when it is on silent!</string>
    <string name="battery_optimization_warning">Ignore Battery Optimization permission is HIGHLY RECOMMENDED in order for this app to alert you when your phone is in silent mode. Otherwise there may be a significant delay in finding your phone!!</string>
    <string name="resource_package">android.resource://com.jamespfluger.devicefinder/</string>
    <string name="device_alert_channel_name">Device Alert (Required)</string>
    <string name="preference_file_key">com.jamespfluger.devicefinder.SHARED_PREFERENCES</string>
    <string name="title_activity_device_navigation">Device Config</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Made with ♥ by James Pfluger</string>
    <string name="nav_header_subtitle">me@jamespfluger.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Device Configuration</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_device_config">Device Config</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="permissions_explanation">
        These permissions aren\'t required, but they help me find your device as quickly as possible!
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_save_toast">Successfully saved settings</string>
    <string name="unknown_error_http_message">Unknown error (%d)</string>
    <string name="settings_save_error_toast">\"Failed to save settings - \"</string>
    <string name="amazon_sign_out_success_toast">Signed out</string>
    <string name="amazon_sign_out_failure">Failed to sign out</string>
    <string name="amazon_login_success">Successfully logged into Amazon.</string>
    <string name="amazon_login_error">Error logging in. Please try again.</string>
    <string name="amazon_login_cancelled">Login cancelled.</string>
    <string name="feature_not_yet_available">(Feature not yet available)</string>
    <string name="warning_message">Warning</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="confirm_deny_permissions">Are you sure you don\'t want to grant these permissions? It may take longer to find your device!\n\nYou can always change this later.</string>
    <string name="quit">Quit</string>
    <string name="confirm_quit_question">Are you sure you want to quit?</string>
    <string name="confirm_logout_question">Are you sure you want to logout?</string>
    <string name="unable_to_load_devices">\"Unable to load devices - \"</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="device_name_required_error">You must provide a device name before continuing.</string>
    <string name="unknown_error">Unknown error</string>
    <string name="alexa_successfully_connected">Successfully connected with Alexa</string>
    <string name="firebase_refresh_error_log">\"Failed to refresh FirebaseToken with exception: \"</string>
    <string name="firebase_refresh_error_toast">Error receiving Firebase token.\n</string>
    <string name="camera_unavailable_error_log">\"Camera access unavailable: \"</string>
    <string name="camera_interrupted_error_log">\"Sleep during camera flash was interrupted: \"</string>
    <string name="amazon_user_fetch_error_toast">Error retrieving profile information.</string>
    <string name="login_logo_content_description">Image logo for Device Finder app</string>
    <string name="deviceFinder">Alexa\nDevice Finder</string>
    <string name="device_name">Device Name</string>
    <string name="device_name_tip">Name your device something easy\nfor Alexa to understand</string>
    <string name="name_of_device">Name of device</string>
    <string name="continue_text">CONTINUE</string>
    <string name="help">Help icon</string>
    <string name="device_name_logo">Device name logo</string>
    <string name="verification">Verification</string>
    <string name="otp_instructions">Say, \'Alexa, set up Device Finder\'</string>
    <string name="submit">SUBMIT</string>
    <string name="verification_logo_content_description">Verification logo</string>
    <string name="device_finder_logo_content_description">Device finder logo</string>
    <string name="permission_status">Permission status</string>
    <string name="why_question">Why?</string>
    <string name="wifi_network_placeholder">(Optional) WiFi network to use</string>
    <string name="volume_to_ring_at">Volume to ring at</string>
    <string name="delete">DELETE</string>
    <string name="save">SAVE</string>
    <string name="only_ring_on_wifi_title">Only ring on wifi</string>
    <string name="only_ring_on_wifi_subtitle">Device will ring even when not connected to WiFi</string>
    <string name="use_vibrate_title">Use vibrate</string>
    <string name="use_vibrate_subtitle">Device will vibrate when finding device</string>
    <string name="use_flashlight_title">Use flashlight</string>
    <string name="use_flashlight_subtitle">Flashlight will turn on/off when finding device</string>
    <string name="permissions_logo_content_description">Permissions logo</string>
    <string name="disable_battery_optimization_explanation">This helps me start up faster so I can ring sooner</string>
    <string name="disable_battery_optimization">Disable Battery Optimization</string>
    <string name="allow_do_not_disturb_override">Allow Do Not Disturb Override</string>
    <string name="allow_do_not_disturb_override_explanation">This allows the notification to reach your phone even if you accidentally put it on silent.</string>
    <string name="permissions">Permissions</string>
    <string name="error_navigation_please_restart">Unable to navigate to new fragment. Please restart the app.</string>
    <string name="error_navigation_log">Could not navigate to new fragment. NavHostFragment is null!</string>
    <string name="log_out">Log out…</string>
    <string name="delete_active_device_question">CAUTION - Delete device?</string>
    <string name="delete_normal_device_question">Delete device?</string>
    <string name="settings_delete_toast">Deleted device settings for \u0020</string>
    <string name="settings_delete_error_toast">Error deleting settings</string>
    <string name="confirm_delete_device">Are you SURE you want to delete the settings for device \'</string>
    <string name="confirm_delete_normal_device">\'? This cannot be undone!</string>
    <string name="confirm_delete_active_device">\'? This is YOUR device. You will be also be signed out!</string>
    <string name="confirm_logout_and_delete_title">Logout and delete?</string>
    <string name="confirm_logout_and_delete_question">Are you sure you want to logout? This will also delete settings for your current device!</string>
    <string name="you_have_unsaved_changes">You have\nunsaved changes</string>
    <string name="help_icon_permissions">Granting these permissions make finding your device faster:\n\n1. Android puts some apps into "sleep mode" if they haven\'t been used recently. This setting lets this app take a nap instead of hibernating for the winter. It doesn\'t use much battery, but older phones may not want to grant this permission\n\n2. If your phone is on do not disturb, the notification may not get through. Granting this permission allows the volume to be set higher!</string>
    <string name="help_icon_device_name">This is the name you will say when asking Alexa to find your device.\n\nExample:\n"Alexa, find Zoey's phone"\n\nIf you only link one device, you will also be able to say "Alexa, find my device"</string>
    <string name="help_icon_verification">When Alexa gives you the 6-digit code, enter them in the same order.\n\nThis verifies the device being used is actually yours.</string>
    <string name="privacy_description">This app collects <i>zero</i> personally identifiable information.\nHowever, it does collect  anonymous technical data. I respect your privacy, and you can opt-out in the "Privacy" section in the top right kebab menu.</string>
    <string name="interaction_directions_1">Say \'Alexa, ask Device Finder to find my phone\'</string>
    <string name="interaction_directions_2">Alexa will identify the device you said</string>
    <string name="interaction_directions_3">Your device start to ring</string>
    <string name="down_arrow">Down arrow</string>
    <string name="how_to_interact">How to interact</string>
    <string name="example_utterances">Many different phrases work:\n\nAlexa, ask Device Finder to find my phone\nAlexa, ask Device Finder to find Jim\'s device\nAlexa, tell Device Finder to locate my tablet\'\nAlexa, tell Device Finder I can\'t find my phone\'</string>
    <string name="privacy">Privacy</string>
    <string name="ways_to_interact">Ways to interact</string>
    <string name="issues_question">Issues?</string>
    <string name="issues_description">Find a bug? Is something broken? Want a new feature? Open an <a href="https://github.com/jamespfluger/Alexa-DeviceFinder/issues/">issue on GitHub</a> or email me at <a href="mailto: me@jamespfluger.com">me@jamespfluger.com</a></string>
    <string name="contribute">Contribute</string>
    <string name="contribute_description">Want to contribute? Check out the <a href="https://github.com/jamespfluger/alexa-devicefinder/">source code here</a>!</string>
    <string name="data_collection">Data collection</string>
    <string name="data_collection_description">Check the box to Opt-In/Out of sharing anonymous technical data.</string>
    <string name="submit_crash_reports">Share technical data</string>
</resources>
