<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/permissionsFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.fragments.PermissionsFragment">

    <ImageView
        android:id="@+id/permissionsImage"
        android:layout_width="127dp"
        android:layout_height="183dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/permissions_logo_content_description"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/img_permissions"
        tools:srcCompat="@drawable/img_permissions" />

    <TextView
        android:id="@+id/permissionsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/permissions"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permissionsImage" />

    <TextView
        android:id="@+id/permissionsDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/permissionsExplanation"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permissionsTitle" />

    <com.jamespfluger.devicefinder.controls.PermissionsView
        android:id="@+id/permissionsDisableBatteryView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/permissionsDescription"
        app:permissionToGrant="BATTERY_OPTIMIZATION"
        app:permissionsExplanation="@string/disable_battery_optimization_explanation"
        app:permissionsTitle="@string/disable_battery_optimization" />

    <com.jamespfluger.devicefinder.controls.PermissionsView
        android:id="@+id/permissionsOverrideDndView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/permissionsDisableBatteryView"
        app:permissionToGrant="DO_NOT_DISTURB_OVERRIDE"
        app:permissionsExplanation="@string/allow_do_not_disturb_override_explanation"
        app:permissionsTitle="@string/allow_do_not_disturb_override" />

    <Button
        android:id="@+id/permissionsContinueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:paddingHorizontal="18dp"
        android:text="@string/continueText"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permissionsOverrideDndView" />

    <ImageView
        android:id="@+id/permissionsHelpIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/help"
        android:scaleX="1.25"
        android:scaleY="1.25"
        android:src="@drawable/ic_help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
