<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:windowSoftInputMode="adjustPan"
    tools:context=".activities.NameActivity">

    <ImageView
        android:id="@+id/nameImage"
        android:layout_width="127dp"
        android:layout_height="183dp"
        android:layout_marginTop="64dp"
        android:layout_weight="1"
        android:src="@drawable/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/name"
        android:contentDescription="@string/device_name_logo" />

    <TextView
        android:id="@+id/deviceNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:text="@string/device_name"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameImage" />

    <TextView
        android:id="@+id/deviceNameInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_name_tip"
        android:textAlignment="center"
        android:textSize="18sp"

        app:layout_constraintBottom_toTopOf="@+id/deviceNameField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deviceNameTitle" />

    <EditText
        android:id="@+id/deviceNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nameOfDevice"
        android:inputType="textPersonName"
        android:maxLength="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deviceNameTitle"
        android:autofillHints="personGivenName" />

    <Button
        android:id="@+id/deviceNameContinueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="18dp"
        android:text="@string/continueText"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deviceNameField" />

    <ImageView
        android:id="@+id/deviceNameHelpIconContentDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/help_circle"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/help" />

    <TextView
        android:id="@+id/deviceNameErrorDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_name_required_error"
        android:textAlignment="center"
        android:textColor="@color/red_error"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deviceNameField" />

</androidx.constraintlayout.widget.ConstraintLayout>
